[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/Hud.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hud_timer_chip.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hud_result_chip.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hp_under.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hp_fill_p1.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hp_fill_p2.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/hud_pause_panel.png" id="7"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1")

[node name="TimerChip" type="TextureRect" parent="."]
offset_left = 260.0
offset_top = 14.0
offset_right = 380.0
offset_bottom = 42.0
texture = ExtResource("2")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 278.0
offset_top = 18.0
offset_right = 364.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
horizontal_alignment = 1
text = "Time: 60"

[node name="P1HpBar" type="TextureProgressBar" parent="."]
offset_left = 20.0
offset_top = 18.0
offset_right = 248.0
offset_bottom = 36.0
min_value = 0.0
max_value = 100.0
value = 100.0
show_percentage = false
texture_under = ExtResource("4")
texture_progress = ExtResource("5")

[node name="P1HpLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 38.0
offset_right = 248.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
text = "P1 HP: 100"

[node name="P2HpBar" type="TextureProgressBar" parent="."]
offset_left = 392.0
offset_top = 18.0
offset_right = 620.0
offset_bottom = 36.0
min_value = 0.0
max_value = 100.0
value = 100.0
show_percentage = false
fill_mode = 1
texture_under = ExtResource("4")
texture_progress = ExtResource("6")

[node name="P2HpLabel" type="Label" parent="."]
offset_left = 392.0
offset_top = 38.0
offset_right = 620.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
horizontal_alignment = 2
text = "P2 HP: 100"

[node name="ResultChip" type="TextureRect" parent="."]
visible = false
offset_left = 130.0
offset_top = 58.0
offset_right = 510.0
offset_bottom = 96.0
texture = ExtResource("3")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 138.0
offset_top = 64.0
offset_right = 502.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(1, 0.95, 0.77, 1)
horizontal_alignment = 1
text = ""

[node name="CombatCalloutLabel" type="Label" parent="."]
visible = false
offset_left = 220.0
offset_top = 106.0
offset_right = 420.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(1, 0.93, 0.64, 1)
theme_override_colors/font_shadow_color = Color(0.06, 0.08, 0.14, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
horizontal_alignment = 1
text = "COUNTER!"

[node name="HitTypeCalloutLabel" type="Label" parent="."]
visible = false
offset_left = 234.0
offset_top = 132.0
offset_right = 406.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(1, 0.82, 0.52, 1)
theme_override_colors/font_shadow_color = Color(0.06, 0.08, 0.14, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
horizontal_alignment = 1
text = "OVERHEAD"

[node name="TrainingPanel" type="Panel" parent="."]
offset_left = 20.0
offset_top = 144.0
offset_right = 356.0
offset_bottom = 340.0

[node name="TrainingTitleLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.78, 0.92, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Training"

[node name="TrainingModeButton" type="Button" parent="TrainingPanel"]
offset_left = 160.0
offset_top = 8.0
offset_right = 326.0
offset_bottom = 30.0
text = "Training: ON"

[node name="TrainingDummyButton" type="Button" parent="TrainingPanel"]
offset_left = 160.0
offset_top = 34.0
offset_right = 326.0
offset_bottom = 56.0
text = "Dummy: Stand"

[node name="TrainingDetailButton" type="Button" parent="TrainingPanel"]
offset_left = 160.0
offset_top = 60.0
offset_right = 326.0
offset_bottom = 82.0
text = "Adv Detail: Off"

[node name="TrainingSummaryLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.98, 0.96, 0.82, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "HIT LIGHT"

[node name="TrainingStunLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 54.0
offset_right = 150.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0.92, 0.95, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Stun: 0f"

[node name="TrainingRecoveryLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 72.0
offset_right = 150.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.92, 0.95, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Recovery: 0f"

[node name="TrainingAdvantageLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 92.0
offset_right = 150.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.80, 1, 0.84, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
horizontal_alignment = 0
text = "Adv: +0f"

[node name="TrainingDetailLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 116.0
offset_right = 326.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.82, 0.89, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
autowrap_mode = 2
clip_text = true
text = "Detail hidden"

[node name="TrainingLogTitleLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 164.0
offset_right = 120.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(0.78, 0.92, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Log"

[node name="TrainingLogLabel" type="Label" parent="TrainingPanel"]
offset_left = 10.0
offset_top = 182.0
offset_right = 326.0
offset_bottom = 332.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
theme_override_colors/font_shadow_color = Color(0.05, 0.06, 0.1, 0.9)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
autowrap_mode = 2
clip_text = true
text = "-"

[node name="PausePanel" type="Panel" parent="."]
visible = false
offset_left = 160.0
offset_top = 70.0
offset_right = 480.0
offset_bottom = 330.0

[node name="PauseBackground" type="TextureRect" parent="PausePanel"]
offset_right = 320.0
offset_bottom = 260.0
mouse_filter = 2
texture = ExtResource("7")

[node name="PauseTitleLabel" type="Label" parent="PausePanel"]
offset_left = 96.0
offset_top = 24.0
offset_right = 224.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
horizontal_alignment = 1
text = "Paused"

[node name="ResumeButton" type="Button" parent="PausePanel"]
offset_left = 80.0
offset_top = 70.0
offset_right = 240.0
offset_bottom = 102.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PausePanel"]
offset_left = 80.0
offset_top = 112.0
offset_right = 240.0
offset_bottom = 144.0
text = "Restart"

[node name="LanguageLabel" type="Label" parent="PausePanel"]
offset_left = 80.0
offset_top = 160.0
offset_right = 240.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0.94, 0.97, 1, 1)
horizontal_alignment = 1
text = "Language"

[node name="LangEnButton" type="Button" parent="PausePanel"]
offset_left = 80.0
offset_top = 190.0
offset_right = 156.0
offset_bottom = 220.0
text = "English"

[node name="LangZhButton" type="Button" parent="PausePanel"]
offset_left = 164.0
offset_top = 190.0
offset_right = 240.0
offset_bottom = 220.0
text = "中文"
